--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "prettier": "^1.10.2",
     "react": "16.2.0",
     "react-native": "0.52.0"
   },
