--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
   "devDependencies": {
     "babel-jest": "22.1.0",
     "babel-preset-react-native": "4.0.0",
-    "jest": "22.1.4",
-    "react-test-renderer": "16.2.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "flow-bin": "0.61.0",
     "husky": "^0.14.3",
-    "lint-staged": "^6.0.0"
+    "jest": "22.1.4",
+    "lint-staged": "^6.0.0",
+    "react-test-renderer": "16.2.0"
   },
   "jest": {
     "preset": "react-native"
