--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "prettier": "^1.10.2",
     "react": "16.2.0",
     "react-native": "0.52.0"
   },
@@ -25,12 +24,15 @@
     "husky": "^0.14.3",
     "jest": "22.1.4",
     "lint-staged": "^6.0.0",
-    "react-test-renderer": "16.2.0"
+    "markdown-toc": "^1.2.0",
+    "react-test-renderer": "16.2.0",
+    "prettier": "^1.10.2"
   },
   "jest": {
     "preset": "react-native"
   },
   "lint-staged": {
-    "*.{js,json,css,md}": ["prettier --write", "git add"]
+    "*.{js,json,css,md}": ["prettier --write", "git add"],
+    "README.md": ["markdown-toc -i", "git add"]
   }
 }
