--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,13 @@
 {
+  "parser": "babel-eslint",
   "env": {
     "jest": true,
     "node": true
   },
-  "extends": ["airbnb", "prettier"],
+  "extends": ["airbnb", "plugin:flowtype/recommended", "prettier"],
+  "plugins": [
+    "flowtype"
+  ],
   "parserOptions": {
     "ecmaVersion": 2017,
     "sourceType": "module",
