--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "PrideLondonApp",
+  "name": "pride-london-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "run-ios": "node node_modules/react-native/local-cli/cli.js run-ios",
+    "run-android":
+      "node node_modules/react-native/local-cli/cli.js run-android",
     "test": "jest",
     "precommit": "lint-staged",
     "lint": "eslint ."
@@ -13,10 +16,13 @@
     "react-native": "0.52.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.1",
     "babel-jest": "22.1.0",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-flowtype": "^2.41.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
@@ -25,8 +31,8 @@
     "jest": "22.1.4",
     "lint-staged": "^6.0.0",
     "markdown-toc": "^1.2.0",
-    "react-test-renderer": "16.2.0",
-    "prettier": "^1.10.2"
+    "prettier": "^1.10.2",
+    "react-test-renderer": "16.2.0"
   },
   "jest": {
     "preset": "react-native"
