--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           command: yarn lint
       - run:
           name: Unit test
-          command: yarn test:ci
+          command: yarn test
       - persist_to_workspace:
           root: ~/repo
           paths:
