--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:9.3
-    working_directory: ~/repo
+    working_directory: ~/project
     steps:
       - checkout
       - <<: *get-cache
@@ -28,25 +28,25 @@ jobs:
           name: Unit test
           command: yarn test
       - persist_to_workspace:
-          root: ~/repo
+          root: ~/project
           paths:
             - node_modules
       - store_test_results:
-          path: ./junit.xml
+          path: ~/project/junit.xml
 
   android:
-    working_directory: ~/repo/android
+    working_directory: ~/project/android
     docker:
       - image: circleci/android:api-27-node8-alpha
     steps:
       - checkout:
-          path: ~/repo
+          path: ~/project
       - attach_workspace:
-          at: ~/repo
+          at: ~/project
       - run: bundle install
-      # - run: bundle exec fastlane test
+      - run: bundle exec fastlane test
       - store_test_results:
-          path: ~/repo/android/reports
+          path: ~/project/android/reports
 
   ios:
     macos:
