--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
       - store_test_results:
           path: ~/project/junit.xml
 
-  android:
+  build-android:
     working_directory: ~/project/android
     docker:
       - image: circleci/android:api-27-node8-alpha
@@ -48,7 +48,7 @@ jobs:
       - store_test_results:
           path: ~/project/android/reports
 
-  ios:
+  build-ios:
     macos:
       xcode: "9.2.0"
     working_directory: /Users/distiller/project/ios
@@ -65,23 +65,50 @@ jobs:
       # differ between the macOS image and the Docker containers above.
       - run: yarn
       - run: bundle install
-      - run: bundle exec fastlane test
-      - run:
-          command: cp $FL_OUTPUT_DIR/scan/report.junit $FL_OUTPUT_DIR/scan/results.xml
-          when: always
+      # - run: bundle exec fastlane test
+      # - run:
+      #     command: cp $FL_OUTPUT_DIR/scan/report.junit $FL_OUTPUT_DIR/scan/results.xml
+      #     when: always
+      - run: bundle exec fastlane build
       - store_artifacts:
           path: /Users/distiller/project/output
       - store_test_results:
           path: /Users/distiller/project/output/scan
+
+  beta-ios:
+    macos:
+      xcode: "9.2.0"
+    working_directory: /Users/distiller/project/ios
+    environment:
+      FL_OUTPUT_DIR: /Users/distiller/project/output
+    shell: /bin/bash --login -o pipefail
+    steps:
+      - checkout:
+          path: /Users/distiller/project
+      - run:
+          name: Set Ruby Version
+          command:  echo "ruby-2.4" > ~/.ruby-version
+      # Not using a workspace here as Node and Yarn versions
+      # differ between the macOS image and the Docker containers above.
+      - run: yarn
+      - run: bundle install
+      - run: bundle exec fastlane beta
 
 workflows:
   version: 2
   node-android-ios:
     jobs:
       - build
-      - android:
+      - build-android:
           requires:
             - build
-      - ios:
+      - build-ios:
           requires:
             - build
+      - beta-ios:
+          requires:
+            - build-ios
+          filters:
+            branches:
+              only:
+                - master
