--- a/.eslintrc
+++ b/.eslintrc
@@ -2,11 +2,20 @@
   "parser": "babel-eslint",
   "env": {
     "jest": true,
-    "node": true
+    "node": true,
+    "react-native/react-native": true
   },
-  "extends": ["airbnb", "plugin:flowtype/recommended", "prettier"],
+  "extends": [
+    "airbnb",
+    "plugin:flowtype/recommended",
+    "prettier",
+    "plugin:import/errors",
+    "plugin:import/warnings"
+  ],
   "plugins": [
-    "flowtype"
+    "flowtype",
+    "react",
+    "react-native"
   ],
   "parserOptions": {
     "ecmaVersion": 2017,
@@ -19,6 +28,10 @@
   },
   "rules": {
     "react/jsx-filename-extension": 0,
-    "no-use-before-define": 0
+    "no-use-before-define": 0,
+    "react-native/no-unused-styles": 2,
+    "react-native/split-platform-components": 2,
+    "react-native/no-inline-styles": 2,
+    "react-native/no-color-literals": 2
   }
 }
