--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-react-native": "^3.2.1",
     "flow-bin": "0.61.0",
     "husky": "^0.14.3",
     "jest": "22.1.4",
