--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lint-staged": "^6.0.0",
     "markdown-toc": "^1.2.0",
     "prettier": "^1.10.2",
+    "react-native-dotenv": "^0.1.1",
     "react-test-renderer": "16.2.0"
   },
   "jest": {
