--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "0.52.0",
+    "react-native-config": "^0.11.5"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
@@ -33,7 +34,6 @@
     "lint-staged": "^6.0.0",
     "markdown-toc": "^1.2.0",
     "prettier": "^1.10.2",
-    "react-native-dotenv": "^0.1.1",
     "react-test-renderer": "16.2.0"
   },
   "jest": {
