--- a/.eslintrc
+++ b/.eslintrc
@@ -12,11 +12,7 @@
     "plugin:import/errors",
     "plugin:import/warnings"
   ],
-  "plugins": [
-    "flowtype",
-    "react",
-    "react-native"
-  ],
+  "plugins": ["flowtype", "react", "react-native"],
   "parserOptions": {
     "ecmaVersion": 2017,
     "sourceType": "module",
@@ -32,6 +28,14 @@
     "react-native/no-unused-styles": 2,
     "react-native/split-platform-components": 2,
     "react-native/no-inline-styles": 2,
-    "react-native/no-color-literals": 2
+    "react-native/no-color-literals": 2,
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": ["./generate-dotenv.js"],
+        "optionalDependencies": false,
+        "peerDependencies": false
+      }
+    ]
   }
 }
