--- a/.eslintrc
+++ b/.eslintrc
@@ -32,7 +32,7 @@
     "import/no-extraneous-dependencies": [
       "error",
       {
-        "devDependencies": ["./generate-dotenv.js"],
+        "devDependencies": ["./generate-dotenv.js", "**/*.test.js"],
         "optionalDependencies": false,
         "peerDependencies": false
       }
