--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "contentful": "^5.0.5",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-config": "^0.11.5"
