--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,9 @@ jobs:
       # Not using a workspace here as Node and Yarn versions
       # differ between the macOS image and the Docker containers above.
       - run: yarn
+      - run:
+          name: Generate .env
+          command: node generate-dotenv.js
       - run: bundle install
       # - run: bundle exec fastlane test
       # - run:
