try building android rather than testing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
       - attach_workspace:
           at: ~/project
       - run: bundle install
-      - run: bundle exec fastlane test
+      - run: bundle exec fastlane build
       - store_test_results:
           path: ~/project/android/reports
 
