--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,6 +97,10 @@ jobs:
       # Not using a workspace here as Node and Yarn versions
       # differ between the macOS image and the Docker containers above.
       - run: yarn
+      - run:
+          name: Generate .env
+          command: node generate-dotenv.js
+          working_directory: /Users/distiller/project
       - run: bundle install
       - run: bundle exec fastlane beta
 
