--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "babel-eslint": "^8.2.1",
     "babel-jest": "22.1.0",
     "babel-preset-react-native": "4.0.0",
+    "commander": "^2.13.0",
+    "contentful-management": "^4.1.4",
     "dotenv": "^4.0.0",
     "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -35,6 +37,7 @@
     "husky": "^0.14.3",
     "jest": "22.1.4",
     "lint-staged": "^6.0.0",
+    "lorem-ipsum": "^1.0.4",
     "markdown-toc": "^1.2.0",
     "prettier": "^1.10.2",
     "react-test-renderer": "16.2.0"
