--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "commander": "^2.13.0",
     "contentful-management": "^4.1.4",
     "dotenv": "^5.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
@@ -40,10 +43,14 @@
     "lorem-ipsum": "^1.0.4",
     "markdown-toc": "^1.2.0",
     "prettier": "^1.10.2",
+    "react-dom": "^16.2.0",
+    "react-native-mock": "^0.3.1",
     "react-test-renderer": "16.2.0"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupTestFrameworkScriptFile": "<rootDir>src/setup-tests.js",
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
   },
   "lint-staged": {
     "*.{js,json,css,md}": ["prettier --write", "git add"],
