--- a/.flowconfig
+++ b/.flowconfig
@@ -12,6 +12,7 @@
 ; For RN Apps installed via npm, "Libraries" folder is inside
 ; "node_modules/react-native" but in the source repo it is in the root
 .*/Libraries/react-native/React.js
+.*/node_modules/react-native-mock/.*
 
 ; Ignore polyfills
 .*/Libraries/polyfills/.*
@@ -25,6 +26,7 @@
 node_modules/react-native/Libraries/react-native/react-native-interface.js
 node_modules/react-native/flow/
 node_modules/react-native/flow-github/
+flow-typed
 
 [options]
 emoji=true
