--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-react-native": "^3.2.1",
     "flow-bin": "^0.63.0",
+    "flow-typed": "^2.3.0",
+    "glow": "^1.2.2",
     "husky": "^0.14.3",
     "jest": "22.2.2",
     "lint-staged": "^6.0.0",
