Fix android deploy (#37)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
                     -F "status=2" \
                     -F "notify=1" \
                     -F "notes=$GIT_COMMIT_DESC" \
-                    -F "commit_sha=$CIRCLE_SHA1"
+                    -F "commit_sha=$CIRCLE_SHA1" \
                     -F "ipa=@./app/build/outputs/apk/app-release.apk" \
                     -H "X-HockeyAppToken: $HOCKEY_APP_TOKEN" \
                     https://rink.hockeyapp.net/api/2/apps/$HOCKEY_APP_ANDROID_APP_ID/app_versions/upload
