--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pride-london-app",
-  "version": "0.0.1",
+  "version": "1.0.3",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -10,7 +10,10 @@
     "test": "jest src",
     "precommit": "lint-staged",
     "lint": "eslint src",
-    "flow": "flow src"
+    "flow": "flow src",
+    "fix-xcode": "react-native-schemes-manager all",
+    "postinstall": "yarn fix-xcode",
+    "postversion": "react-native-version"
   },
   "dependencies": {
     "contentful": "^5.0.5",
@@ -40,6 +43,8 @@
     "lorem-ipsum": "^1.0.4",
     "markdown-toc": "^1.2.0",
     "prettier": "^1.10.2",
+    "react-native-schemes-manager": "^1.0.1",
+    "react-native-version": "^2.4.1",
     "react-test-renderer": "16.2.0"
   },
   "jest": {
@@ -48,5 +53,9 @@
   "lint-staged": {
     "*.{js,json,css,md}": ["prettier --write", "git add"],
     "README.md": ["markdown-toc -i", "git add"]
+  },
+  "xcodeSchemes": {
+    "Debug": [],
+    "Release": ["Adhoc"]
   }
 }
