Add beta flavor (#38)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,6 +139,10 @@ android {
             resValue "string", "build_config_package", "com.pridelondonapp"
         }
         beta {
+            applicationId 'com.pridelondonapp.beta'
+            resValue "string", "build_config_package", "com.pridelondonapp"
+        }
+        production {
             applicationId 'com.pridelondonapp'
             resValue "string", "build_config_package", "com.pridelondonapp"
         }
