--- a/ios/PrideLondonApp.xcodeproj/xcshareddata/xcschemes/PrideLondonApp.xcscheme
+++ b/ios/PrideLondonApp.xcodeproj/xcshareddata/xcschemes/PrideLondonApp.xcscheme
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "PrideLondonApp.app"
+               BuildableName = "Pride in LDN.app"
                BlueprintName = "PrideLondonApp"
                ReferencedContainer = "container:PrideLondonApp.xcodeproj">
             </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "PrideLondonApp.app"
+            BuildableName = "Pride in LDN.app"
             BlueprintName = "PrideLondonApp"
             ReferencedContainer = "container:PrideLondonApp.xcodeproj">
          </BuildableReference>
@@ -96,7 +96,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "PrideLondonApp.app"
+            BuildableName = "Pride in LDN.app"
             BlueprintName = "PrideLondonApp"
             ReferencedContainer = "container:PrideLondonApp.xcodeproj">
          </BuildableReference>
@@ -115,7 +115,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "PrideLondonApp.app"
+            BuildableName = "Pride in LDN.app"
             BlueprintName = "PrideLondonApp"
             ReferencedContainer = "container:PrideLondonApp.xcodeproj">
          </BuildableReference>
