add basic redux implementation

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react": "16.2.0",
     "react-native": "0.53.0",
     "react-native-config": "^0.11.5",
-    "react-navigation": "^1.0.3"
+    "react-navigation": "^1.0.3",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
