add redux devtools

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-navigation": "^1.0.3",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
