--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "16.2.0",
     "react-native": "0.53.0",
     "react-native-config": "^0.11.5",
+    "react-native-safe-area-view":
+      "robbiemccorkell/react-native-safe-area-view",
     "react-navigation": "^1.0.3",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
@@ -58,6 +60,9 @@
     "react-native-schemes-manager": "^1.0.1",
     "react-native-version": "^2.4.1",
     "react-test-renderer": "16.2.0"
+  },
+  "resolutions": {
+    "react-native-safe-area-view": "robbiemccorkell/react-native-safe-area-view"
   },
   "jest": {
     "preset": "react-native",
