--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "16.2.0",
     "react-native": "0.53.0",
     "react-native-config": "^0.11.5",
+    "react-native-easy-markdown": "^1.1.9",
     "react-native-safe-area-view":
       "robbiemccorkell/react-native-safe-area-view",
     "react-navigation": "^1.0.3",
