Only load Gradle properties file if it exists (#45)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -122,11 +122,14 @@ android {
     signingConfigs {
         release {
             Properties props = new Properties()
-            props.load(new FileInputStream(file("../.gradle/gradle.properties")))
-            storeFile file(props['keystore'])
-            storePassword props['keystore.password']
-            keyAlias props['keystore.alias']
-            keyPassword props['keystore.keypass']
+            File propertiesFile = new File(".gradle/gradle.properties");
+            if (propertiesFile.exists()) {
+                props.load(new FileInputStream(propertiesFile))
+                storeFile file(props['keystore'])
+                storePassword props['keystore.password']
+                keyAlias props['keystore.alias']
+                keyPassword props['keystore.keypass']
+            }
         }
     }
     buildTypes {
