--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.53.0",
     "react-native-config": "^0.11.5",
     "react-native-easy-markdown": "^1.1.9",
+    "react-native-map-link": "^1.0.6",
     "react-native-maps": "0.16.4",
     "react-native-safe-area-view":
       "robbiemccorkell/react-native-safe-area-view",
