--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "contentful": "^5.0.5",
+    "date-fns": "^1.29.0",
     "react": "16.2.0",
     "react-native": "0.53.0",
     "react-native-config": "^0.11.5",
