--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,35 @@ save-cache: &save-cache
     paths:
       - node_modules
     key: dependencies-{{ checksum "package.json" }}
+ruby_dependencies: &ruby_dependencies
+  run:
+    name: Download Ruby Dependencies
+    command: bundle check || bundle install --path vendor/bundle
+android_dependencies: &android_dependencies
+  run:
+    name: Download Android Dependencies
+    command: ./gradlew androidDependencies
+gradle_key: &gradle_key
+  jars-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
+gems_key: &gems_key
+  gems-{{ checksum "Gemfile.lock" }}
+restore_gradle_cache: &restore_gradle_cache
+  restore_cache:
+    key: *gradle_key 
+restore_gems_cache: &restore_gems_cache
+  restore_cache:
+    key: *gems_key
+save_gradle_cache: &save_gradle_cache
+  save_cache:
+    key: *gradle_key
+    paths:
+      - ~/.gradle
+      - ~/.m2
+save_gems_cache: &save_gems_cache
+  save_cache:
+    key: *gems_key
+    paths:
+      - vendor/bundle
 
 version: 2
 jobs:
@@ -45,16 +74,23 @@ jobs:
     working_directory: ~/project/android
     docker:
       - image: circleci/android:api-27-node8-alpha
+    environment:
+      TERM: dumb
     steps:
       - checkout:
           path: ~/project
       - attach_workspace:
           at: ~/project
+      - <<: *restore_gradle_cache
+      - <<: *restore_gems_cache
+      - <<: *ruby_dependencies
+      - <<: *android_dependencies
+      - <<: *save_gradle_cache
+      - <<: *save_gems_cache
       - run: git clone git@github.com:redbadger/pride-android-secrets.git
       - run: mkdir -p .gradle 
       - run: echo -e "keystore=$ANDROID_KEYSTORE_PATH\nkeystore.alias=$ANDROID_KEYSTORE_ALIAS\nkeystore.password=$ANDROID_KEYSTORE_PASSWORD\nkeystore.keypass=$ANDROID_KEYSTORE_PASSWORD\nversionCode=$CIRCLE_BUILD_NUM" >> .gradle/gradle.properties
       - run: echo -e "apiSecret=$FABRIC_BUILD_SECRET\napiKey=$FABRIC_API_KEY" >> ./app/fabric.properties
-      - run: bundle install
       - run: 
             command: |
                 bundle exec fastlane alpha \
@@ -72,11 +108,19 @@ jobs:
     working_directory: ~/project/android
     docker:
       - image: circleci/android:api-27-node8-alpha
+    environment:
+      TERM: dumb
     steps:
       - checkout:
           path: ~/project
       - attach_workspace:
           at: ~/project
+      - <<: *restore_gradle_cache
+      - <<: *restore_gems_cache
+      - <<: *ruby_dependencies
+      - <<: *android_dependencies
+      - <<: *save_gradle_cache
+      - <<: *save_gems_cache
       - run: git clone git@github.com:redbadger/pride-android-secrets.git
       - run: mkdir -p .gradle 
       - run: echo -e "keystore=$ANDROID_KEYSTORE_PATH\nkeystore.alias=$ANDROID_KEYSTORE_ALIAS\nkeystore.password=$ANDROID_KEYSTORE_PASSWORD\nkeystore.keypass=$ANDROID_KEYSTORE_PASSWORD\nversionCode=$CIRCLE_BUILD_NUM" >> .gradle/gradle.properties
