Remove code duplication of android secrets generation in CircleCI (#53)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,33 +6,40 @@ save-cache: &save-cache
     paths:
       - node_modules
     key: dependencies-{{ checksum "package.json" }}
-ruby_dependencies: &ruby_dependencies
+android-secrets: &android-secrets
+  run: 
+    command: |
+      git clone git@github.com:redbadger/pride-android-secrets.git
+      mkdir -p .gradle 
+      echo -e "keystore=$ANDROID_KEYSTORE_PATH\nkeystore.alias=$ANDROID_KEYSTORE_ALIAS\nkeystore.password=$ANDROID_KEYSTORE_PASSWORD\nkeystore.keypass=$ANDROID_KEYSTORE_PASSWORD\nversionCode=$CIRCLE_BUILD_NUM" >> .gradle/gradle.properties
+      echo -e "apiSecret=$FABRIC_BUILD_SECRET\napiKey=$FABRIC_API_KEY" >> ./app/fabric.properties  
+ruby-dependencies: &ruby-dependencies
   run:
     name: Download Ruby Dependencies
     command: bundle check || bundle install --path vendor/bundle
-android_dependencies: &android_dependencies
+android-dependencies: &android-dependencies
   run:
     name: Download Android Dependencies
     command: ./gradlew androidDependencies
-gradle_key: &gradle_key
+gradle-key: &gradle-key
   jars-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
-gems_key: &gems_key
+gems-key: &gems-key
   gems-{{ checksum "Gemfile.lock" }}
-restore_gradle_cache: &restore_gradle_cache
+restore-gradlecache: &restore-gradle-cache
   restore_cache:
-    key: *gradle_key 
-restore_gems_cache: &restore_gems_cache
+    key: *gradle-key 
+restore-gems-cache: &restore-gems-cache
   restore_cache:
-    key: *gems_key
-save_gradle_cache: &save_gradle_cache
+    key: *gems-key
+save-gradle-cache: &save-gradle-cache
   save_cache:
-    key: *gradle_key
+    key: *gradle-key
     paths:
       - ~/.gradle
       - ~/.m2
-save_gems_cache: &save_gems_cache
+save-gems-cache: &save-gems-cache
   save_cache:
-    key: *gems_key
+    key: *gems-key
     paths:
       - vendor/bundle
 
@@ -81,16 +88,13 @@ jobs:
           path: ~/project
       - attach_workspace:
           at: ~/project
-      - <<: *restore_gradle_cache
-      - <<: *restore_gems_cache
-      - <<: *ruby_dependencies
-      - <<: *android_dependencies
-      - <<: *save_gradle_cache
-      - <<: *save_gems_cache
-      - run: git clone git@github.com:redbadger/pride-android-secrets.git
-      - run: mkdir -p .gradle 
-      - run: echo -e "keystore=$ANDROID_KEYSTORE_PATH\nkeystore.alias=$ANDROID_KEYSTORE_ALIAS\nkeystore.password=$ANDROID_KEYSTORE_PASSWORD\nkeystore.keypass=$ANDROID_KEYSTORE_PASSWORD\nversionCode=$CIRCLE_BUILD_NUM" >> .gradle/gradle.properties
-      - run: echo -e "apiSecret=$FABRIC_BUILD_SECRET\napiKey=$FABRIC_API_KEY" >> ./app/fabric.properties
+      - <<: *android-secrets
+      - <<: *restore-gradle-cache
+      - <<: *restore-gems-cache
+      - <<: *ruby-dependencies
+      - <<: *android-dependencies
+      - <<: *save-gradle-cache
+      - <<: *save-gems-cache
       - run: 
             command: |
                 bundle exec fastlane alpha \
@@ -115,17 +119,13 @@ jobs:
           path: ~/project
       - attach_workspace:
           at: ~/project
-      - <<: *restore_gradle_cache
-      - <<: *restore_gems_cache
-      - <<: *ruby_dependencies
-      - <<: *android_dependencies
-      - <<: *save_gradle_cache
-      - <<: *save_gems_cache
-      - run: git clone git@github.com:redbadger/pride-android-secrets.git
-      - run: mkdir -p .gradle 
-      - run: echo -e "keystore=$ANDROID_KEYSTORE_PATH\nkeystore.alias=$ANDROID_KEYSTORE_ALIAS\nkeystore.password=$ANDROID_KEYSTORE_PASSWORD\nkeystore.keypass=$ANDROID_KEYSTORE_PASSWORD\nversionCode=$CIRCLE_BUILD_NUM" >> .gradle/gradle.properties
-      - run: echo -e "apiSecret=$FABRIC_BUILD_SECRET\napiKey=$FABRIC_API_KEY" >> ./app/fabric.properties
-      - run: bundle install
+      - <<: *android-secrets
+      - <<: *restore-gradle-cache
+      - <<: *restore-gems-cache
+      - <<: *ruby-dependencies
+      - <<: *android-dependencies
+      - <<: *save-gradle-cache
+      - <<: *save-gems-cache
       - run: 
             command: |
                 bundle exec fastlane beta \
