--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.versions = [
+        minSdk: 16,
+        compileSdk: 27,
+        targetSdk: 27,
+        buildTools: '27.0.3',
+        gradleBuildTools: '3.0.1',
+        supportLibrary: '27.1.0'
+    ]
+
     repositories {
+        google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath "com.android.tools.build:gradle:${versions.gradleBuildTools}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,6 +26,7 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        google()
         jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
