Test reporter in CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,8 +64,18 @@ jobs:
           name: Type check
           command: yarn flow
       - run:
+          command: |
+              curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+              chmod +x ./cc-test-reporter
+      - run:
+          command: 
+              ./cc-test-reporter before-build
+      - run:
           name: Unit test
           command: yarn test
+      - run:
+          command: 
+              ./cc-test-reporter after-build
       - run:
           name: Generate .env
           command: node ./scripts/generate-dotenv.js
