--- a/.flowconfig
+++ b/.flowconfig
@@ -42,6 +42,8 @@ module.name_mapper='^[./a-zA-Z0-9$_-]+\.\(bmp\|gif\|jpg\|jpeg\|png\|psd\|svg\|we
 module.file_ext=.js
 module.file_ext=.jsx
 module.file_ext=.json
+module.file_ext=.android.js
+module.file_ext=.ios.js
 module.file_ext=.native.js
 
 suppress_type=$FlowIssue
