Add date picker when user selects "Choose dates"

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^1.29.0",
     "react": "16.2.0",
     "react-native": "0.54.0",
+    "react-native-calendars": "^1.17.4",
     "react-native-config": "^0.11.5",
     "react-native-easy-markdown": "^1.1.9",
     "react-native-map-link": "^1.0.6",
@@ -51,8 +52,8 @@
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-detox": "^1.0.0",
     "eslint-import-resolver-react-native": "^0.1.0",
+    "eslint-plugin-detox": "^1.0.0",
     "eslint-plugin-flowtype": "^2.43.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
