--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -222,6 +222,7 @@ repositories {
 }
 
 dependencies {
+    compile project(':react-native-splash-screen')
     implementation(project(':react-native-maps')) {
         exclude group: 'com.google.android.gms', module: 'play-services-base'
         exclude group: 'com.google.android.gms', module: 'play-services-maps'
