Improve getAssetById code

--- a/package.json
+++ b/package.json
@@ -88,6 +88,9 @@
     "transformIgnorePatterns": [
       "node_modules/(?!(jest-)?react-native|react-navigation)"
     ],
+    "moduleNameMapper": {
+      "\\.(png|gif|jpeg|jpg)$": "RelativeImageStub"
+    },
     "collectCoverage": true
   },
   "lint-staged": {
