--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -223,6 +223,7 @@ repositories {
 
 dependencies {
     compile project(':react-native-splash-screen')
+    compile project(':react-native-linear-gradient')
     implementation(project(':react-native-maps')) {
         exclude group: 'com.google.android.gms', module: 'play-services-base'
         exclude group: 'com.google.android.gms', module: 'play-services-maps'
